# gtk

./: configure.ac
demos/: Makefile.am
demos/font-features/: Makefile.am  README  font-features.c  font-features.gresource.xml
gtk/: Makefile.am  gtkcssnodeutils.c  gtkentry.c  gtkfilechooserwidget.c  gtkgesturelongpress.c  gtkgesturelongpressprivate.h  gtkpathbar.c  gtkrange.c  gtkstylecontext.c  gtkstylecontextprivate.h  gtkwidget.c  gtkwindow.c
gtk/theme/Adwaita/: _common.scss  gtk-contained-dark.css  gtk-contained.css
po/: POTFILES.in
testsuite/reftests/: Makefile.am
